--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "description": "",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "resend": "^3.2.0",
   }
 }
