--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,8 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.1",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1",
-    "resend": "^6.2.0"
+    "slick-carousel": "^1.8.1"
+    
     
   },
   "devDependencies": {
