--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axois": "^0.0.1-security",
     "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
+    "framer-motion": "^11.0.0", 
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
